# navi-backend

./: .gitignore  LICENSE  README.md  aws.py  config.py  containers.py  database.py  firebase.py  get_id_token.py  main.py  pyproject.toml  safe_route_algorithm.py
.github/ISSUE_TEMPLATE/: task_template.md  이슈-템플릿.md
.github/workflows/: deploy.yml
common/: auth.py  auth_middleware.py  context_vars.py  logger.py  models.py
relay/: relay_server.py
report/application/: report_comment_service.py  report_evaluating_service.py  report_not_there_service.py  report_service.py
report/domain/: report.py  report_comment.py  report_evaluating.py  report_not_there.py
report/domain/repository/: report_comment_repo.py  report_evaluating_repo.py  report_not_there_repo.py  report_repo.py
report/infra/: event_bus.py  firebase.py
report/infra/db_models/: report.py  report_comment.py  report_evaluating.py  report_not_there.py
report/infra/repository/: postgres_report_comment_repo.py  postgres_report_evaluating_repo.py  postgres_report_not_there_repo.py  postgres_report_repo.py
report/interface/controllers/: report_comment_controller.py  report_controller.py  report_evaluating_controller.py  report_not_there_controller.py
route/algorithms/: safe_path_finder.py
route/application/: route_service.py
route/domain/: route.py
route/domain/repository/: route_repo.py
route/infra/db_models/: route.py
route/infra/repository/: postgres_route_repo.py
route/interface/controllers/: route_controller.py
test/: init_db.py  test_report_cluster.py
user/application/: consent_service.py  user_service.py
user/domain/: user.py
user/infra/db_models/: __init__.py  (+3 more)
user/test_user/: get_id_token.py
(+6 files in other folders)
